Add Layered-divergecast for heterogeneous traffic patterns

--- a/os/services/layered/Makefile.layered
+++ b/os/services/layered/Makefile.layered
@@ -1,3 +1,5 @@
 CFLAGS += -DBUILD_WITH_LAYERED=1
+ifdef LAYERED_DIVERGECAST
+  CFLAGS += -DLAYERED_DIVERGECAST=1
+endif
 MODULES += os/services/packet-type
-
